--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -20,27 +20,42 @@
         <div class="container">
             <article class="content">
                 <h1>Hey there!</h1>
-                <p> Game development, pixel art? Isn't it a perfect combo? -tell me we got something in common there!
+
+                <p><strong>Game development</strong> and <strong>pixel art</strong>—now that’s a combo worth obsessing
+                    over, right? Tell me we’ve got that in common.</p>
+
+                <p>I’m a <strong>seasoned Java game developer</strong> with a passion for building <strong>highly
+                        customized RPGs</strong> and <strong>pixel art experiences</strong>. And yes—I handcraft every
+                    pixel of my games too. Every sprite, every scene, all <strong>forged with care and intent</strong>.
                 </p>
-                <p> I'm a seasoned Java game developer specializing in highly custom-built games, RPGs, and pixel art,
-                    yeah
-                    I make pixel art on games too.</p>
-                <p> I don't just develop games, I help make and build dream ideas came into realty. I love building
-                    games
-                    that don't just function-I want it to feel alive and unique. Worlds and arts with personality,
-                    characters with charm. And mechanics that keep players coming back to the fantasy world! </p>
-                <p>All projects in this site are my personal solo projects, I made everything from coding to graphics
-                    and
-                    designs, (and yeah including this web site) feel free to check it out.</p>
-                <h3>Specialties : </h3>
+
+                <p>But I’m not just about games. I also design and build <strong>powerful Android apps</strong> using
+                    <strong>Kotlin</strong> and <strong>Jetpack Compose</strong>. From <strong>clean
+                        architecture</strong> and <strong>reactive UI</strong> to <strong>smooth performance</strong>
+                    and <strong>real-world utility</strong>—I bring ideas to life in app form too. Whether it's a smart
+                    productivity tool or a feature-rich utility, I aim to make apps that are <strong>elegant, useful,
+                        and a joy to use</strong>.</p>
+
+                <p>I don’t just develop things—I <strong>create them from scratch</strong>. Whether it's a world, a
+                    tool, or an idea, I bring it to life with <strong>attention to detail</strong>,
+                    <strong>functionality</strong>, and <strong>soul</strong>. Every project you’ll find here is a
+                    <strong>solo venture</strong>: coding, graphics, design—even this very website.</p>
+
+                <h3><strong>What I specialize in:</strong></h3>
                 <ul>
-                    <li>Retro-inspired RPGs with rich stories and engaging mechanics</li>
-                    <li>Pixel art games that blend nostalgia with innovation</li>
-                    <li>Smart apps that solve real problems and spark joy</li>
-                    <li>Creative tools and experiences that users actually want to use</li>
+                    <li><strong>Retro-inspired RPGs</strong> with rich stories and immersive mechanics</li>
+                    <li><strong>Pixel art games</strong> that blend nostalgia with innovation</li>
+                    <li><strong>Android apps</strong> built with <strong>Kotlin</strong> and <strong>Jetpack
+                            Compose</strong>—fluid UIs, clean code, and meaningful features</li>
+                    <li><strong>Creative tools and digital experiences</strong> that solve real problems and elevate
+                        user experience</li>
                 </ul>
-                <p>If you're building something cool, let's bring it into life!</p>
+
+                <p>If you're building something bold—whether it’s a <strong>game</strong>, an <strong>app</strong>, or
+                    something in between—<strong>let’s forge it into reality</strong>.</p>
             </article>
+
+
         </div>
     </main>
 
