--- a/assets/html/legal.html
+++ b/assets/html/legal.html
@@ -21,11 +21,11 @@
             <h1>Legal Pages</h1>
             <section class="content-sectioned">
                 <h2>Rent finder</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
+                <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
                     consequatur odio, iusto amet, molestiae, ipsa sequi ratione in ad quod mollitia vitae molestias
                     veritatis.
-                </p>
+                </p> -->
                 <ul>
                     <li><a href="https://sites.google.com/view/rentfinder/terms-of-use"
                             aria-label="Read the terms of use for Rent finder" target="_blank"
@@ -38,11 +38,11 @@
 
             <section class="content-sectioned">
                 <h2>Swords and Legends</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
+                <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
                     consequatur odio, iusto amet, molestiae, ipsa sequi ratione in ad quod mollitia vitae molestias
                     veritatis.
-                </p>
+                </p> -->
                 <ul>
                     <li><a href="/projects/games/sal/terms.html" target="_blank"
                             rel="noopener noreferrer">Terms of Use</a></li>
@@ -53,11 +53,11 @@
 
             <section class="content-sectioned">
                 <h2>Shooting Marbles</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
+                <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
                     consequatur odio, iusto amet, molestiae, ipsa sequi ratione in ad quod mollitia vitae molestias
                     veritatis.
-                </p>
+                </p> -->
                 <ul>
                     <li><a href="/projects/games/shootingmarbles/terms.html" target="_blank"
                             rel="noopener noreferrer">Terms of Use</a></li>
@@ -68,11 +68,11 @@
 
             <section class="content-sectioned">
                 <h2>Spidee Tap</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
+                <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aspernatur excepturi quo vel atque
                     saepe
                     consequatur odio, iusto amet, molestiae, ipsa sequi ratione in ad quod mollitia vitae molestias
                     veritatis.
-                </p>
+                </p> -->
                 <ul>
                     <li><a href="/projects/games/spideetap/terms.html" target="_blank" rel="noopener noreferrer">Terms
                             of Use</a></li>
@@ -85,7 +85,6 @@
 
     <footer></footer>
 
-    <script src="/assets/js/component-loader.js"></script>
     <script type="module">
         import { loadComponent } from '/assets/js/component-loader.js';
         loadComponent({
