--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -11,7 +11,7 @@
     <ul class="nav-links">
         <li><a href="">Game Projects</a></li>
         <li><a href="">App Projects</a></li>
-        <li><a href="">Gallery</a></li>
+        <!-- <li><a href="">Gallery</a></li> -->
         <li><a href="/assets/html/about.html">About</a></li>
     </ul>
 </div>
@@ -29,14 +29,13 @@
     <ul class="nav-links">
         <li><a href="">Game Projects</a></li>
         <li><a href="">App Projects</a></li>
-        <li><a href="">Gallery</a></li>
+        <!-- <li><a href="">Gallery</a></li> -->
         <li><a href="/assets/html/about.html">About</a></li>
     </ul>
 </div>
 
 <div class="navbar-terms-privacy">
-   
-    <a href="/index.html" class="logo">
+    <a href="/index.html" class="app-logo">
         <img src="/assets/images/datsforge_64x64.png"
             alt="Pixel art anvil surrounded by bright flame on a dark background, symbolizing the datsforge brand, conveying creativity, energy, and strength">
         <span>datsforge</span>
