--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-apps">
                 <h2 id="section-apps">Apps that solve real problems</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
             </section>
         </div>
 
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-games">
                 <h2 id="section-games">Chill with casual games</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
             </section>
         </div>
 
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-rpg">
                 <h2 id="section-rpg">RPG adventures!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
             </section>
         </div>
 
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-tools">
                 <h2 id="section-tools">Useful tools</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
             </section>
         </div>
 
