--- a/projects/games/sal/terms.html
+++ b/projects/games/sal/terms.html
@@ -31,6 +31,10 @@
 
   <!-- Component Loaders -->
   <script type="module">
+    document.body.dataset.logoSrc = "/projects/games/sal/images/icon512x512.png";
+    document.body.dataset.brandName = "Swords and Legends";
+    document.body.dataset.logoAlt = "Swords and Legends logo, a stylized pixel art orb with a mystical aura, representing the game's fantasy adventure theme.";
+   
     import { loadTPNavComponent } from '/assets/js/nav-tp-loader.js';
     import { loadComponent } from '/assets/js/component-loader.js';
 
