--- a/projects/games/spideetap/terms.html
+++ b/projects/games/spideetap/terms.html
@@ -31,6 +31,10 @@
 
   <!-- Component Loaders -->
   <script type="module">
+    document.body.dataset.logoSrc = "/projects/games/spideetap/images/icon512x512.png";
+    document.body.dataset.brandName = "Spidee Tap";
+    document.body.dataset.logoAlt="Spidee Tap logo, a stylized pixel art spider with a playful design, representing the game's fun and engaging nature.";
+
     import { loadTPNavComponent } from '/assets/js/nav-tp-loader.js';
     import { loadComponent } from '/assets/js/component-loader.js';
 
