--- a/projects/games/shootingmarbles/privacy.html
+++ b/projects/games/shootingmarbles/privacy.html
@@ -31,6 +31,10 @@
 
   <!-- Component Loader Scripts -->
   <script type="module">
+    document.body.dataset.logoSrc = "/projects/games/shootingmarbles/images/icon512x512.png";
+    document.body.dataset.brandName = "Shooting Marbles";
+    document.body.dataset.logoAlt = "Shooting Marbles logo, a stylized marbles with a playful design, representing the game's fun and engaging nature.";
+
     import { loadTPNavComponent } from '/assets/js/nav-tp-loader.js';
     import { loadComponent } from '/assets/js/component-loader.js';
 
