--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,3 +1,8 @@
+<!-- 
+  © 2025 datsforge 
+  Proprietary – See LICENSE for details. 
+-->
+
 <div class="footer-main">
     <p>© 2025 datsforge. All rights reserved.</p>
     <a href="/assets/html/legal.html">Legal</a>
