--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!--
-  © 2025 datsforge
-  All rights reserved. Do not distribute without permission.
+<!-- 
+  © 2025 datsforge 
+  Proprietary – See LICENSE for details. 
 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
