--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -1,3 +1,8 @@
+<!-- 
+  © 2025 datsforge 
+  Proprietary – See LICENSE for details. 
+-->
+
 <div class="navbar-main" >
     <a href="/index.html" class="logo">
         <img src="/assets/images/datsforge_64x64.png"
