--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="About datsforge - learn more about our creative lab.">
     <title>About | datsforge.com</title>
-    <link rel="icon" type="image/png" href="../images/icons/favicon.png">
+    <link rel="icon" type="image/png" href="../images/datsforge/icon/favicon.png">
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/nav.css">
