--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="datsforge: a creative lab where ideas are forged into reality." />
     <title>datsforge.com</title>
 
-    <link rel="icon" type="image/png" href="assets/images/datsforge/icon/favicon.png"/>
+    <link rel="icon" type="image/png" href="assets/images/datsforge/icon/datsforge_icon_v006_64x64.png" />
     <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
@@ -48,28 +48,55 @@
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-apps">
                 <h2 id="section-apps">Apps that solve real problems</h2>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
+                <div class="mockup_right_aligned">
+                    <img src="assets/images/mockups/rentfinder_m3.png" alt="">
+                    <p>Rent Finder is a mobile app designed to solve the real-world challenge of finding rental spaces.
+                        <br>
+                        With a user-centered design and direct landlord-renter communication, it
+                        showcases how purposeful design and development can turn everyday problems into practical
+                        digital solutions.
+                    </p>
+                </div>
             </section>
         </div>
 
         <div class="container">
-            <section class="content-sectioned" aria-labelledby="section-games">
+            <section class="content" aria-labelledby="section-games">
                 <h2 id="section-games">Chill with casual games</h2>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
+                <div class="mockup_left_aligned">
+                    <p>Spidee Tap and Shooting Marbles are casual mobile games developed for android, designed for
+                        quick, addictive play.<br>Both are crafted with clean
+                        visuals, responsive controls, and a focus on instant fun.</p>
+                    <img src="assets/images/mockups/st-sm_m1.png" alt="">
+                </div>
             </section>
         </div>
 
         <div class="container">
-            <section class="content-sectioned" aria-labelledby="section-rpg">
+            <section class="content" aria-labelledby="section-rpg">
                 <h2 id="section-rpg">RPG adventures!</h2>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
+                <div class="mockup_right_aligned">
+                    <img src="assets/images/mockups/sal_m1.png" alt="">
+                    <p>Swords and Legends is a pixel RPG adventure game in active development, designed to immerse
+                        players in a vibrant, handcrafted world brimming with eccentric characters, meaningful choices,
+                        and memorable quests.<br>
+                        This project is not just a game—it's a living proof of what passion-driven, solo indie
+                        development can achieve.</p>
+                </div>
             </section>
         </div>
 
         <div class="container">
-            <section class="content-sectioned" aria-labelledby="section-tools">
+            <section class="content" aria-labelledby="section-tools">
                 <h2 id="section-tools">Useful tools</h2>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p> -->
+                <div class="mockup_left_aligned">
+                    <p>datsync is a streamlined Bash tool designed to simplify file synchronization between Linux
+                        systems and external devices such as Android phones and USB drives. The script supports pushing
+                        and pulling files, precise mirroring, and flexible storage options, enabling efficient backup
+                        and transfer workflows.</p>
+                    <img src="assets/images/mockups/datsync_m1.png" alt="">
+
+                </div>
             </section>
         </div>
 
