fix some layout misbahaviour on different window sizes

--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -14,10 +14,10 @@
     <label for="menu-toggle-main" class="menu-icon">&#9776;</label>
 
     <ul class="nav-links">
-        <li><a href="">Game Projects</a></li>
-        <li><a href="">App Projects</a></li>
+        <li class="nav-link"><a  href="">Game Projects</a></li>
+        <li class="nav-link"><a  href="">App Projects</a></li>
         <!-- <li><a href="">Gallery</a></li> -->
-        <li><a href="/assets/html/about.html">About</a></li>
+        <li class="nav-link"><a href="/assets/html/about.html">About</a></li>
     </ul>
 </div>
 
@@ -32,10 +32,10 @@
     <label for="menu-toggle-legal" class="menu-icon">&#9776;</label>
 
     <ul class="nav-links">
-        <li><a href="">Game Projects</a></li>
-        <li><a href="">App Projects</a></li>
+        <li><a class="nav-link" href="">Game Projects</a></li>
+        <li><a class="nav-link" href="">App Projects</a></li>
         <!-- <li><a href="">Gallery</a></li> -->
-        <li><a href="/assets/html/about.html">About</a></li>
+        <li><a class="nav-link" href="/assets/html/about.html">About</a></li>
     </ul>
 </div>
 
@@ -50,7 +50,7 @@
     <label for="menu-toggle-terms-privacy" class="menu-icon">&#9776;</label>
 
     <ul class="nav-links">
-        <li><a href="">Terms of Use</a></li>
-        <li><a href="">Privacy Policy</a></li>
+        <li><a class="nav-link" href="">Terms of Use</a></li>
+        <li><a class="nav-link" href="">Privacy Policy</a></li>
     </ul>
 </div>
