--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <!-- Header -->
     <header class="header-banner" role="banner">
         <div class="header-content">
-            <h1>Welcome to datsforge!</h1>
-            <p>Forge lighted. Ideas brewing. Stay tuned.</p>
-            <p class="tagline" aria-label="Tagline">"Your ideas — <em>Not just built, forged!</em>"</p>
+            <div class="slogan" aria-label="Slogan">
+                <h1>Welcome to datsforge!</h1>
+                <p>"  Your ideas</p>
+                <p>-<strong>Not just built ,  forged!</strong>  "</p>
+            </div>
         </div>
     </header>
 
