A little homepage polish with links and some link animations

--- a/assets/html/nav.html
+++ b/assets/html/nav.html
@@ -14,8 +14,9 @@
     <label for="menu-toggle-main" class="menu-icon">&#9776;</label>
 
     <ul class="nav-links">
-        <li class="nav-link"><a  href="">Game Projects</a></li>
-        <li class="nav-link"><a  href="">App Projects</a></li>
+        <li class="nav-link"><a  href="">Projects</a></li>
+        <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
+        <!-- <li class="nav-link"><a  href="">App Projects</a></li> -->
         <!-- <li><a href="">Gallery</a></li> -->
         <li class="nav-link"><a href="/assets/html/about.html">About</a></li>
     </ul>
@@ -31,11 +32,12 @@
     <input type="checkbox" id="menu-toggle-legal" class="menu-toggle">
     <label for="menu-toggle-legal" class="menu-icon">&#9776;</label>
 
-    <ul class="nav-links">
-        <li><a class="nav-link" href="">Game Projects</a></li>
-        <li><a class="nav-link" href="">App Projects</a></li>
+     <ul class="nav-links">
+        <li class="nav-link"><a  href="">Projects</a></li>
+        <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
+        <!-- <li class="nav-link"><a  href="">App Projects</a></li> -->
         <!-- <li><a href="">Gallery</a></li> -->
-        <li><a class="nav-link" href="/assets/html/about.html">About</a></li>
+        <li class="nav-link"><a href="/assets/html/about.html">About</a></li>
     </ul>
 </div>
 
