--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
+
 </head>
 
 <body>
@@ -28,8 +29,8 @@
         <div class="header-content">
             <div class="slogan" aria-label="Slogan">
                 <h1>Welcome to datsforge!</h1>
-                <p>"  Your ideas</p>
-                <p>-<strong>Not just built ,  forged!</strong>  "</p>
+                <p>" YOUR ideas</p>
+                <p>-<strong>Not just built , FORGED!</strong> "</p>
             </div>
         </div>
     </header>
@@ -37,27 +38,42 @@
     <!-- Main Content -->
     <main role="main" id="main-content">
         <div class="container">
-            <article class="content" aria-labelledby="section-intro">
-                <h2 id="section-intro">Build more than just games and apps</h2>
-                <p>Let's create digital experiences! Whether it’s a pixel RPG, a quirky mobile app, or a tool designed
-                    to make life smoother — everything we craft is made with purpose, passion, and a bit of playful
-                    magic.</p>
-                <p>This is a studio where imagination meets execution, and where every project — big or small — is
-                    forged with care. <em>You’ve</em> got the spark. <em>We’ve</em> got the forge!</p>
+            <article class="content-centered" aria-labelledby="section-intro">
+                <h2 id="section-intro">Forge ideas into unforgettable experiences!</h2>
+                <p>From enchanting pixel worlds to smart, seamless tools — every line of code and stroke of art here is
+                    crafted to spark curiosity, solve real problems, and feel damn good to use.
+                <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities that
+                    click, captivate, and connect. You bring the vision. I'll forge the rest.</p>
             </article>
         </div>
+
 
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-apps">
                 <h2 id="section-apps">Apps that solve real problems</h2>
                 <div class="mockup_right_aligned">
                     <img src="assets/images/mockups/rentfinder_m3.png" alt="">
-                    <p>Rent Finder is a mobile app designed to solve the real-world challenge of finding rental spaces.
-                        <br>
-                        With a user-centered design and direct landlord-renter communication, it
-                        showcases how purposeful design and development can turn everyday problems into practical
-                        digital solutions.
-                    </p>
+                    <div class="mockup_descriptions">
+                        <div>
+                            <p>Rent Finder is a mobile app designed to solve the real-world challenge of finding rental
+                                spaces.
+                            </p>
+                            <p>
+                                With a user-centered design and direct landlord-renter communication, it
+                                showcases how purposeful design and development can turn everyday problems into
+                                practical
+                                digital solutions.
+                            </p>
+                        </div>
+                        <a href="https://sites.google.com/view/rentfinder/home" class="link-with-icon" target="_blank"
+                            rel="noopener noreferrer" aria-label="Visit Rent Finder site">
+                            Visit Site
+                            <svg class="clickable_icon">
+                                <use href="#open_in_new_icon"></use>
+                            </svg>
+                        </a>
+                    </div>
+
                 </div>
             </section>
         </div>
@@ -66,9 +82,32 @@
             <section class="content" aria-labelledby="section-games">
                 <h2 id="section-games">Chill with casual games</h2>
                 <div class="mockup_left_aligned">
-                    <p>Spidee Tap and Shooting Marbles are casual mobile games developed for android, designed for
-                        quick, addictive play.<br>Both are crafted with clean
-                        visuals, responsive controls, and a focus on instant fun.</p>
+                    <div class="mockup_descriptions">
+                        <p>Spidee Tap and Shooting Marbles are casual mobile games developed for android, designed for
+                            quick, addictive play.<br>Both are crafted with clean
+                            visuals, responsive controls, and a focus on instant fun.</p>
+
+                        <div class="link-with-icon-group">
+                            <a href="https://play.google.com/store/apps/details?id=com.datsgud.speederTap"
+                                class="link-with-icon" target="_blank" rel="noopener noreferrer"
+                                aria-label="Open link to Spidee Tap on Google Play">
+                                Spidee Tap on Google Play
+                                <svg class="clickable_icon">
+                                    <use href="#play_icon"></use>
+                                </svg>
+                            </a>
+                            <a href="https://play.google.com/store/apps/details?id=com.datsgud.shootingMarbles"
+                                class="link-with-icon" target="_blank" rel="noopener noreferrer"
+                                aria-label="Open link to Shooting Marbles on Google Play">
+                                Shooting Marbles on Google Play
+                                <svg class="clickable_icon">
+                                    <use href="#play_icon"></use>
+                                </svg>
+                            </a>
+                        </div>
+
+
+                    </div>
                     <img src="assets/images/mockups/st-sm_m1.png" alt="">
                 </div>
             </section>
@@ -79,11 +118,24 @@
                 <h2 id="section-rpg">RPG adventures!</h2>
                 <div class="mockup_right_aligned">
                     <img src="assets/images/mockups/sal_m1.png" alt="">
-                    <p>Swords and Legends is a pixel RPG adventure game in active development, designed to immerse
-                        players in a vibrant, handcrafted world brimming with eccentric characters, meaningful choices,
-                        and memorable quests.<br>
-                        This project is not just a game—it's a living proof of what passion-driven, solo indie
-                        development can achieve.</p>
+                    <div class="mockup_descriptions">
+                        <div>
+                            <p>Swords and Legends is a pixel RPG adventure game in active development, designed to
+                                immerse
+                                players in a vibrant, handcrafted world brimming with eccentric characters, meaningful
+                                choices,
+                                and memorable quests.</p>
+                            <p>
+                                This project is not just a game—it's a living proof of what passion-driven, solo indie
+                                development can achieve.</p>
+                        </div>
+                        <a href="mailto:sal@datsforge.com" class="link-with-icon" aria-label="Email sal@datsforge.com">
+                            Be part of the development!
+                            <svg class="clickable_icon">
+                                <use href="#mail_icon"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
@@ -92,23 +144,42 @@
             <section class="content" aria-labelledby="section-tools">
                 <h2 id="section-tools">Useful tools</h2>
                 <div class="mockup_left_aligned">
-                    <p>datsync is a streamlined Bash tool designed to simplify file synchronization between Linux
-                        systems and external devices such as Android phones and USB drives. The script supports pushing
-                        and pulling files, precise mirroring, and flexible storage options, enabling efficient backup
-                        and transfer workflows.</p>
+                    <div class="mockup_descriptions">
+                        <div>
+                            <p>datsync is a streamlined Bash tool designed to simplify file synchronization between
+                                Linux
+                                systems and external devices such as Android phones and USB drives.</p>
+                            <p>The script
+                                supports
+                                pushing
+                                and pulling files, precise mirroring, and flexible storage options, enabling efficient
+                                backup
+                                and transfer workflows.</p>
+                        </div>
+                        <a href="https://github.com/datsforge/datsync" class="link-with-icon" target="_blank"
+                            rel="noopener noreferrer" aria-label="Visit datsync project on Github">
+                            Check it out on Github
+                            <svg class="clickable_icon">
+                                <use href="#github_icon"></use>
+                            </svg>
+                        </a>
+                    </div>
                     <img src="assets/images/mockups/datsync_m1.png" alt="">
-
                 </div>
             </section>
         </div>
 
         <div class="container">
             <section class="content-sectioned" aria-labelledby="section-contact">
-                <h2 id="section-contact">Get in touch!</h2>
+                <h2 id="section-contact">Let’s build something!</h2>
+                 <div class="mockup_descriptions">
                 <p>Drop me an email anytime:</p>
-                <p>
-                    <a href="mailto:contact@datsforge.com" aria-label="Email datsforge">contact@datsforge.com</a>
-                </p>
+                <a href="mailto:sal@datsforge.com" class="link-with-icon" aria-label="Email sal@datsforge.com">
+                   contact@datsforge.com
+                    <svg class="clickable_icon">
+                        <use href="#mail_icon"></use>
+                    </svg>
+                </a>
             </section>
         </div>
 
@@ -117,6 +188,16 @@
     <footer role="contentinfo"></footer>
 
     <!-- Scripts -->
+
+    <!-- Load Icons -->
+    <div id="svg-sprite-container"></div>
+    <script>
+        fetch('/assets/html/icons.html')
+            .then(res => res.text())
+            .then(svg => {
+                document.getElementById('svg-sprite-container').innerHTML = svg;
+            });
+    </script>
 
     <script type="module">
         import { loadComponent } from '/assets/js/component-loader.js';
